fix(style): remove width sizing of body tag
remove width sizing with viewport from body tag. this cause a bug of horizontal scroll into desktop view when a vertical scroll appear

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,6 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  width: 100vw;
 }
 
 [hidden] {
